# autolabel

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASETS.md  Makefile  README.md  SECURITY.md  pyproject.toml  run_proof.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_discrepancy.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
autolabel/: __init__.py  __main__.py  cli.py  config.py
autolabel/benchmark/: __init__.py  baselines.py  configs.py  report.py  runner.py  visualize.py
autolabel/core/: __init__.py  agent.py  bootstrap.py  experiment.py  failure_analysis.py  loop.py  meta.py  ratchet.py  strategy.py
autolabel/data/: __init__.py  dataset.py  loaders.py
autolabel/evaluation/: __init__.py  evaluator.py  lf_analysis.py  metrics.py
autolabel/label_model/: __init__.py  base.py  generative.py  majority_vote.py  weighted_vote.py
autolabel/lf/: __init__.py  applicator.py  base.py  generator.py  library.py  registry.py  sandbox.py  scorer.py  templates.py
autolabel/llm/: __init__.py  anthropic.py  base.py  cost_tracker.py  gemini.py  groq.py  ollama.py  openai.py
autolabel/logging/: __init__.py  experiment_log.py  progress.py
autolabel/text/: __init__.py  normalize.py
datasets/airline_tweets/: dataset_airlines.jsonl
docs/proof/: README.md  airline_tweets_benchmark_results.json  proof_v7_8b_mv_40iter_final_summary.json  proof_v7_8b_mv_40iter_meta.json
docs/releases/: v1.0.0.md
examples/: airline_tweets_demo.py  custom_task.py
notebooks/: proof_of_concept.ipynb
tests/: conftest.py  test_benchmark_time_budget.py  test_cli.py  test_label_model.py  test_lf_applicator.py  test_lf_generator.py  test_llm_providers.py  test_loop.py  test_multilingual.py  test_sandbox.py  test_v2_features.py  test_visualize.py
